--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>java-hola-mundo</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Java project with Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -90,7 +90,10 @@
 		<repository>
 			<id>github</id>
 			<name>jorgelmunozp</name>
-			<url>https://github.com/jorgelmunozp/java-hola-mundo</url>
+			<url>https://maven.pkg.github.com/jorgelmunozp/java-hola-mundo</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
 		</repository>
 	</distributionManagement>
 
